--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ fastapi==0.104.1
 uvicorn[standard]==0.24.0
 pydantic==2.5.0
 pydantic-settings==2.1.0
+pytest==8.4.2
 python-multipart==0.0.6
 mangum==0.17.0
 pillow==10.1.0
